<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GestionProduit">

    <!-- Button for "Ajouter Produit" -->
    <Button
        android:id="@+id/btnAjoutP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ajouter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="32dp"
        android:padding="16dp" />

    <!-- Button for "Supprimer Produit" -->
    <Button
        android:id="@+id/btnSuppressionP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/supprimer"
        app:layout_constraintTop_toBottomOf="@+id/btnAjoutP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="16dp"
        android:padding="16dp" />

    <!-- Button for "Modifier Produit" -->
    <Button
        android:id="@+id/btnModificationP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/modifier"
        app:layout_constraintTop_toBottomOf="@+id/btnSuppressionP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="16dp"
        android:padding="16dp" />

    <!-- Button for "Consulter Produit" -->
    <Button
        android:id="@+id/btnConsultationP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/consultation"
        app:layout_constraintTop_toBottomOf="@+id/btnModificationP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="16dp"
        android:padding="16dp" />

    <!-- Button for "Retour" -->
    <Button
        android:id="@+id/btnretourP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/retour"
        app:layout_constraintTop_toBottomOf="@+id/btnConsultationP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="32dp"
        android:padding="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
