<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModificationProduit">

    <!-- Spinner for Selecting Product ID -->
    <Spinner
        android:id="@+id/spinnerProductIds"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:prompt="@string/select_product_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <!-- Input for Designation -->
    <EditText
        android:id="@+id/inputDesignation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/produit_designation"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/spinnerProductIds"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <!-- Input for Prix -->
    <EditText
        android:id="@+id/inputPrix"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/produit_prix"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/inputDesignation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <!-- Input for Quantité -->
    <EditText
        android:id="@+id/inputQuantite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/produit_quantite"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/inputPrix"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <!-- Button to Save Changes -->
    <Button
        android:id="@+id/btnSaveChanges"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/save_changes"
        app:layout_constraintTop_toBottomOf="@id/inputQuantite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:padding="12dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
